--- a/style.css
+++ b/style.css
@@ -3,5 +3,17 @@ body {
 }
 
 canvas {
-    border: solid 1px greenyellow;
+    border: solid 4px rgb(6, 177, 0);
+}
+
+#content {
+    margin: 1em;
+    padding: 2em;
+    display: flex;
+    flex-direction: column ;
+    align-items:center;
+}
+
+#pelinappi {
+    margin: 1em;
 }
