--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
     background-color: rgb(100, 100, 100);
     overflow-x: hidden;
     overflow-y: auto;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 canvas {
@@ -24,6 +25,7 @@ canvas {
     width: 120px;
     height: 60px;
     font-size: 2em;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 #pelinappi:hover {
@@ -34,4 +36,8 @@ canvas {
     display: flex;
     flex-direction: column;
     align-items:center;
+}
+
+h1 {
+    font-size: 2em;
 }
