--- a/style.css
+++ b/style.css
@@ -37,6 +37,11 @@ canvas {
     flex-direction: column;
     align-items:center;
 }
+#lopetus {
+    display: flex;
+    flex-direction: column;
+    align-items:center;
+}
 
 h1 {
     font-size: 2em;
