--- a/style.css
+++ b/style.css
@@ -52,7 +52,11 @@ h1 {
     text-align: right;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 2em;
-    margin-right: 7em;
+    margin-right: 4.7em;
     margin-top: .2em;
 
+}
+
+#lopetus {
+    text-align: center;
 }
